--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@babel/preset-react": "^7.23.3"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "aws-sdk": "^2.1532.0",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
